pkg/lang/testdata/ub/file/factory/invalid/unknown-namespace-call.ub
outputs: {
  shout: { value: @std.format('%s', 'hi') }
}
